--- a/examples/index.html
+++ b/examples/index.html
@@ -279,7 +279,7 @@
           <div class="card-body">
             <div class="card-text-pair">
               <h2 class="labelBold40">Checkout</h2>
-              <p class="labelRegular20 text-secondary">Ticket purchase flow with order summary, payment form, and seat selection.</p>
+              <p class="labelRegular20 text-secondary">Checkout page from B2C ticket purchase experience.</p>
             </div>
             <div class="token-tags">
               <div class="tag"><span class="labelBold20">card-closed</span></div>
@@ -290,7 +290,7 @@
             </div>
           </div>
           <div class="card-footer">
-            <span class="labelRegular10 text-secondary">Wolves theme</span>
+            <span class="labelRegular10 text-secondary">Wolves Theme</span>
             <span class="material-symbols-rounded text-secondary">open_in_new</span>
           </div>
         </a>
@@ -318,7 +318,35 @@
             </div>
           </div>
           <div class="card-footer">
-            <span class="labelRegular10 text-secondary">Wolves theme · Dark</span>
+            <span class="labelRegular10 text-secondary">Wolves Theme</span>
+            <span class="material-symbols-rounded text-secondary">open_in_new</span>
+          </div>
+        </a>
+
+        <!-- ---- Documentation ---- -->
+        <a class="example-card" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
+          <div class="card-thumbnail">
+            <iframe src="https://diet-air-ds.vercel.app/walkthrough.html"
+                    loading="lazy"
+                    title="Walkthrough example preview"
+                    tabindex="-1"
+                    aria-hidden="true"></iframe>
+          </div>
+          <div class="card-body">
+            <div class="card-text-pair">
+              <h2 class="labelBold40">Documentation</h2>
+              <p class="labelRegular20 text-secondary">Design system walkthrough with all components and tokens.</p>
+            </div>
+            <div class="token-tags">
+              <div class="tag"><span class="labelBold20">cards</span></div>
+              <div class="tag"><span class="labelBold20">colors</span></div>
+              <div class="tag"><span class="labelBold20">bg-surface</span></div>
+              <div class="tag"><span class="labelBold20">text-pairs</span></div>
+              <div class="tag"><span class="labelBold20">display-type</span></div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <span class="labelRegular10 text-secondary">Jump Theme  •  Light</span>
             <span class="material-symbols-rounded text-secondary">open_in_new</span>
           </div>
         </a>
