--- a/examples/index.html
+++ b/examples/index.html
@@ -259,7 +259,7 @@
       <!-- Page header — Text Pair 7000 -->
       <div class="card-text-pair mb-400">
         <h1 class="display400">Example Pages</h1>
-        <p class="labelRegular30 text-secondary">Real-world UI patterns built with Diet AirDS tokens and components. Click any card to open the live example.</p>
+        <p class="labelRegular30 text-secondary">Web pages built with Diet AirDS tokens and components. Click any card to open the live example.</p>
       </div>
 
       <!-- ============================================
