--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <section class="hero-section">
       <div class="card-text-pair">
         <h1 class="display500 text-primary">Welcome to Diet AirDS</h1>
-        <p class="labelRegular40 text-secondary">Copy and paste these prompts to build with AI code generators. <a href="/walkthrough.html">Learn More about Diet AirDS</a></p>
+        <p class="labelRegular40 text-secondary">This is a pure CSS version of AirDS that is easy to understand and great for prototyping. Copy and paste these prompts to build with AI code generators. <a href="/walkthrough.html">Learn More about Diet AirDS</a></p>
       </div>
     </section>
 
