--- a/walkthrough.html
+++ b/walkthrough.html
@@ -633,8 +633,8 @@
      ========================================== -->
 <div class="container-wide py-large mt-row">
   <div class="card-text-pair mb-200">
-    <h1 class="display600">Diet AirDS</h1>
-    <p class="labelRegular40 text-secondary">Token & Style Walkthrough — Visual Reference</p>
+    <h1 class="display600">Tokens & Styles</h1>
+    <p class="labelRegular40 text-secondary">Walkthrough & Visual Reference</p>
   </div>
   <p class="bodyRegular30 text-primary doc-prose">
     A complete reference of every token, class, and utility available in the design system. Switch the <strong>theme</strong> and <strong>mode</strong> above to see every example update live.
