--- a/examples/index.html
+++ b/examples/index.html
@@ -218,8 +218,8 @@
     </a>
 
     <nav class="org-nav-links">
-      <a href="/index.html">Prompts</a>
-      <a href="/walkthrough.html">Walkthrough</a>
+      <a href="/index.html">Getting Started</a>
+      <a href="/walkthrough.html">Tokens & Styles</a>
       <a href="/examples/index.html" class="active">Examples</a>
     </nav>
 
@@ -258,8 +258,8 @@
 
       <!-- Page header — Text Pair 7000 -->
       <div class="card-text-pair mb-400">
-        <h1 class="display400">Example Pages</h1>
-        <p class="labelRegular30 text-secondary">Web pages built with Diet AirDS tokens and components. Click any card to open the live example.</p>
+        <h1 class="display600">Examples</h1>
+        <p class="labelRegular40 text-secondary">Web pages built with Diet AirDS tokens and components. Click any card to open the live example.</p>
       </div>
 
       <!-- ============================================
