--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
     <span class="display200 text-primary">Diet AirDS</span>
   </a>
   <nav class="org-nav-links">
-    <a href="/index.html" class="active">Prompts</a>
-    <a href="/walkthrough.html">Walkthrough</a>
+    <a href="/index.html" class="active">Getting Started</a>
+    <a href="/walkthrough.html">Tokens & Styles</a>
     <a href="/examples/index.html">Examples</a>
   </nav>
   <div class="org-nav-controls">
