--- a/walkthrough.html
+++ b/walkthrough.html
@@ -566,8 +566,8 @@
     <span class="display200 text-primary">Diet AirDS</span>
   </a>
   <nav class="org-nav-links">
-    <a href="/index.html">Prompts</a>
-    <a href="/walkthrough.html" class="active">Walkthrough</a>
+    <a href="/index.html">Getting Started</a>
+    <a href="/walkthrough.html" class="active">Tokens & Styles</a>
     <a href="/examples/index.html">Examples</a>
   </nav>
   <div class="org-nav-controls">
