--- a/examples/checkout.html
+++ b/examples/checkout.html
@@ -391,7 +391,7 @@
         <span class="btn-icon material-symbols-rounded">notifications</span>
       </button>
       <button class="btn-circle btn-circle-300 btn-circle-team" aria-label="Account">
-        <span class="btn-icon" style="color:inherit;font-family:'Inter',sans-serif;font-weight:600;font-size:16px;">A</span>
+        <span class="btn-circle-letter">A</span>
       </button>
     </div>
   </header>
