--- a/examples/checkout.html
+++ b/examples/checkout.html
@@ -60,7 +60,7 @@
 
     /* ─── Page header ─── */
     .page-header {
-      padding: var(--spacing-300) var(--margin-large);
+      padding: var(--spacing-600) var(--margin-large) var(--spacing-300);
       border-bottom: var(--border-weight-100) solid var(--neutral-200);
       background: var(--bg-nav);
     }
@@ -401,7 +401,7 @@
   ═══════════════════════════════════════════ -->
   <div class="page-header">
     <div class="card-text-pair">
-      <h1 class="display400">CHECKOUT</h1>
+      <h1 class="display500">CHECKOUT</h1>
       <p class="labelRegular20 text-secondary">Your tickets will be available once your purchase has been successfully completed</p>
     </div>
   </div>
