checkout and md

--- a/examples/checkout.html
+++ b/examples/checkout.html
@@ -60,8 +60,8 @@
 
     /* ─── Page header ─── */
     .page-header {
-      padding-top: var(--spacing-600);
-      padding-bottom: var(--spacing-300);
+      padding-top: var(--spacing-800);
+      padding-bottom: var(--spacing-500);
       border-bottom: var(--border-weight-100) solid var(--neutral-200);
       background: var(--bg-nav);
     }
@@ -385,7 +385,7 @@
   <header class="top-bar">
     <div class="top-bar-team">
       <div class="leading-logo" role="img" aria-label="Minnesota Timberwolves logo" style="width:48px;height:48px;"></div>
-      <span class="display100 top-bar-name">TIMBERWOLVES</span>
+      <span class="display100 top-bar-name">Minnesota Timberwolves</span>
     </div>
     <div class="top-bar-actions">
       <button class="btn-circle btn-circle-300 btn-circle-neutral-tertiary" aria-label="Notifications">
