--- a/examples/checkout.html
+++ b/examples/checkout.html
@@ -78,8 +78,8 @@
       display: grid;
       grid-template-columns: 1fr 360px;
       gap: var(--spacing-content);
-      padding-top: var(--margin-large);
-      padding-bottom: var(--margin-large);
+      padding-top: var(--margin-small);
+      padding-bottom: var(--margin-small);
       align-items: start;
     }
 
