--- a/examples/checkout.html
+++ b/examples/checkout.html
@@ -411,7 +411,7 @@
 
   <div class="holding-banner">
     <div class="container">
-      <p class="labelRegular20 text-secondary">Holding seats for <span class="timer-highlight">11:59</span></p>
+      <p class="labelRegular20 text-secondary">Holding seats for <span class="text-success">11:59</span></p>
     </div>
   </div>
 
