--- a/walkthrough.html
+++ b/walkthrough.html
@@ -694,7 +694,7 @@
       </thead>
       <tbody>
         <tr><td>1</td><td><code>design-tokens-master.css</code></td><td>Core color tokens, brand colors per team, neutral/inverted scales, semantic tokens</td></tr>
-        <tr><td>2</td><td><code>spacing-tokens.css</code></td><td>Fixed spacing scale (4px–80px) and responsive spacing tokens</td></tr>
+        <tr><td>2</td><td><code>spacing-tokens.css</code></td><td>Fixed spacing scale (2px–80px) and responsive spacing tokens</td></tr>
         <tr><td>3</td><td><code>container-tokens.css</code></td><td>Max-width container classes (640px–1600px) with responsive padding</td></tr>
         <tr><td>4</td><td><code>border-effects-tokens.css</code></td><td>Border radius, border weight, drop shadow tokens and utility classes</td></tr>
         <tr><td>5</td><td><code>fonts.css</code></td><td>@font-face declarations for all team display fonts</td></tr>
@@ -990,6 +990,7 @@
     <table class="doc-table">
       <thead><tr><th>Token</th><th>Value</th><th>Multiplier</th><th>Common Use</th></tr></thead>
       <tbody>
+        <tr><td><code>--spacing-25</code></td><td>2px</td><td>0.25×</td><td>Sub-unit gaps, tight label/input stacking</td></tr>
         <tr><td><code>--spacing-50</code></td><td>4px</td><td>0.5×</td><td>Minimal gaps, icon padding</td></tr>
         <tr><td><code>--spacing-100</code></td><td>8px</td><td>1×</td><td>Tight spacing, compact layouts</td></tr>
         <tr><td><code>--spacing-150</code></td><td>12px</td><td>1.5×</td><td>Small gaps between related items</td></tr>
