--- a/input-demo.html
+++ b/input-demo.html
@@ -386,7 +386,7 @@
           <div class="input-and-message">
             <div class="input-control">
               <span class="input-select-display is-placeholder" id="sel-1-display">Choose a sport</span>
-              <span class="input-select-chevron material-symbols-rounded">expand_more</span>
+              <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
               <select id="sel-1"
                 onchange="syncSelect('sel-default', 'sel-1-display', this)"
                 onfocus="openSelect('sel-default')"
@@ -411,7 +411,7 @@
           <div class="input-and-message">
             <div class="input-control">
               <span class="input-select-display" id="sel-2-display">Basketball</span>
-              <span class="input-select-chevron material-symbols-rounded">expand_more</span>
+              <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
               <select id="sel-2"
                 onchange="syncSelect('sel-filled', 'sel-2-display', this)"
                 onfocus="openSelect('sel-filled')"
@@ -437,7 +437,7 @@
             <div class="input-control">
               <span class="input-icon material-symbols-rounded">sports_basketball</span>
               <span class="input-select-display is-placeholder" id="sel-3-display">Choose a position</span>
-              <span class="input-select-chevron material-symbols-rounded">expand_more</span>
+              <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
               <select id="sel-3"
                 onchange="syncSelect('sel-icon', 'sel-3-display', this)"
                 onfocus="openSelect('sel-icon')"
@@ -463,7 +463,7 @@
           <div class="input-and-message">
             <div class="input-control">
               <span class="input-select-display is-placeholder" id="sel-4-display">Select your country</span>
-              <span class="input-select-chevron material-symbols-rounded">expand_more</span>
+              <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
               <select id="sel-4"
                 onchange="syncSelect('sel-msg', 'sel-4-display', this)"
                 onfocus="openSelect('sel-msg')"
@@ -489,7 +489,7 @@
           <div class="input-and-message">
             <div class="input-control">
               <span class="input-select-display is-placeholder" id="sel-5-display">Choose a team</span>
-              <span class="input-select-chevron material-symbols-rounded">expand_more</span>
+              <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
               <select id="sel-5"
                 onchange="syncSelect('sel-error', 'sel-5-display', this)"
                 onfocus="openSelect('sel-error')"
@@ -514,7 +514,7 @@
           <div class="input-and-message">
             <div class="input-control">
               <span class="input-select-display is-placeholder" id="sel-6-display">Not available</span>
-              <span class="input-select-chevron material-symbols-rounded">expand_more</span>
+              <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
               <select id="sel-6" disabled>
                 <option value="" disabled selected>Not available</option>
               </select>
@@ -600,7 +600,7 @@
         <div class="input-and-message">
           <div class="input-control">
             <span class="input-select-display is-placeholder" id="f-sport-display">Choose a sport</span>
-            <span class="input-select-chevron material-symbols-rounded">expand_more</span>
+            <span class="input-select-chevron material-symbols-rounded">arrow_drop_down</span>
             <select id="f-sport"
               onchange="syncSelect('f-sport-field', 'f-sport-display', this)"
               onfocus="openSelect('f-sport-field')"
